...
  private let buttonsView: ButtonsView = {
    let primaryButton = PrimaryButton(style: .imageAndTitleCenter)
    primaryButton.setTitle(L.emailReceipt,
                           for: .normal)
    primaryButton.setImage(.envelopeIcon?.withRenderingMode(.alwaysTemplate),
                           for: .normal)
    primaryButton.accessibilityIdentifier = "emailReceiptButton"
    
    let nonPrimaryButton = NonPrimaryButton()
    nonPrimaryButton.setTitle(L.close,
                              for: .normal)
    nonPrimaryButton.accessibilityIdentifier = "closeButton"
    
    let view = ButtonsView(primaryButton: primaryButton,
                           nonPrimaryButton: nonPrimaryButton,
                           insets: .init(top: 44, left: 16, bottom: 16, right: 16))
    view.translatesAutoresizingMaskIntoConstraints = false
    return view
...
