...
    let label = UILabel()
    label.numberOfLines = 0
    label.text = "Result will be here"
    return label
  }()
  
  let accessTokenTextField: UITextField = {
    let textField = UITextField()
    textField.borderStyle = .roundedRect
    textField.placeholder = "User access token"
    textField.accessibilityIdentifier = "accessTokenTextField"
    return textField
  }()
...
  }()
  
  let button: UIButton = {
    let button = UIButton(type: .system)
    button.setTitle("DO SMTH", for: .normal)
    button.translatesAutoresizingMaskIntoConstraints = false
    button.accessibilityIdentifier = "doSmthButton"
    return button
  }()
  
  override func viewDidLoad() {
    super.viewDidLoad()
    view.backgroundColor = .backgroundColor
...
